--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.1
 Werkzeug==0.14.1
-Flask-BasicAuth ==0.4.1
+Flask-BasicAuth
 Flask-Login
 dicttoxml
